Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28950

Issues with debugging on iOS device

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Not Evaluated
    • Qt Creator 11.0.0-beta2
    • Qt Creator 9.0.2
    • Debugger
    • None
    • iOS/tvOS/watchOS
    • 562c5774e (11.0)

    Description

      Results from manual testing for 6.5.0 RC on iOS:

      When trying to debug on iOS device, the debugger repeatedly tries and fails to connect to the device for more than 1 minute. Once it connects, the breakpoints are hit, but it's not possible to step over or into them. Tried with a debug build and with Qt Debug Information Files installed. Video attached: debugging-issue.mp4

       

      Steps to reproduce:

      Open Qt Creator and debug a Qt example on an iOS device

       

       

      Attachments

        1. debugger-log
          80 kB
        2. debugging-issue.mp4
          28.49 MB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            con Eike Ziller
            dorisverria Doris Verria
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes